# cli-failure

./: Cargo.toml  README.md
src/: lib.rs
